# syntacticsugar

./: .bazeliskrc  .bazelrc  .gitignore  Cargo.toml  Makefile  README.md  WORKSPACE.bazel
.github/workflows/: ci.yml
backend/: BUILD.bazel  Cargo.toml
backend/src/: lib.rs  print.rs
buybacks/: BUILD.bazel
buybacks/src/: lib.rs  print.rs
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.bytes-1.4.0.bazel  BUILD.hermit-abi-0.2.6.bazel  BUILD.libc-0.2.141.bazel  BUILD.lock_api-0.4.9.bazel  BUILD.mio-0.8.6.bazel  BUILD.num_cpus-1.15.0.bazel  BUILD.parking_lot-0.12.1.bazel  BUILD.parking_lot_core-0.9.7.bazel  BUILD.proc-macro2-1.0.56.bazel  BUILD.quote-1.0.26.bazel  BUILD.signal-hook-registry-1.4.1.bazel  BUILD.smallvec-1.10.0.bazel  BUILD.socket2-0.4.9.bazel  BUILD.syn-2.0.15.bazel  BUILD.tokio-1.27.0.bazel  BUILD.tokio-macros-2.0.0.bazel  BUILD.unicode-ident-1.0.8.bazel  BUILD.winapi-0.3.9.bazel  BUILD.windows-sys-0.45.0.bazel  BUILD.windows-targets-0.42.2.bazel  BUILD.windows_aarch64_gnullvm-0.42.2.bazel  BUILD.windows_aarch64_msvc-0.42.2.bazel  BUILD.windows_i686_gnu-0.42.2.bazel  BUILD.windows_i686_msvc-0.42.2.bazel  BUILD.windows_x86_64_gnu-0.42.2.bazel  BUILD.windows_x86_64_gnullvm-0.42.2.bazel  BUILD.windows_x86_64_msvc-0.42.2.bazel
chatbob/: BUILD.bazel
chatbob/backend/: main.rs
