# Setup rust dependencies for bazel monorepo with cargo-raze
# https://github.com/google/cargo-raze
[package]
name = "bazel_with_cargo_raze"
version = "0.0.0"
edition = "2021"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

#
# --- Dependencies ---
#
[dependencies]
tokio = { version = "1.27.0", features = ["full"] }

#
# --- Cargo raze settings ---
#
[package.metadata.raze]
# `cargo raze` will generate bazel-compatilble BUILD files in this directory
workspace_path = "//cargo"
package_aliases_dir = "cargo"

# The set of targets to generate BUILD rules for
# (If empty generates for every possible target)
targets = [
    # MacOS ARM
    "aarch64-apple-darwin",
    # Linux
    "x86_64-unknown-linux-gnu",
]

# Generate dependencies using remote dependency mode
# https://github.com/google/cargo-raze#remote-dependency-mode
genmode = "Remote"
