workspace(name = "chatbob")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# To find additional information on this release or newer ones visit:
# https://github.com/bazelbuild/rules_rust/releases
http_archive(
    name = "rules_rust",
    sha256 = "950a3ad4166ae60c8ccd628d1a8e64396106e7f98361ebe91b0bcfe60d8e4b60",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.20.0/rules_rust-v0.20.0.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(edition = "2021")

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies(bootstrap = True)

load("@rules_rust//crate_universe:defs.bzl", "crates_repository")

# We ingest dependencies in Bazel by using the root Cargo.toml file
# There is a way to have a "Cargo free" setup, but it breaks other IDE tools (i.e.: rust-analyzer)
# https://bazelbuild.github.io/rules_rust/crate_universe.html#cargo-workspaces

crates_repository(
    name = "crate_index_backend",
    cargo_lockfile = "//backend:Cargo.lock",
    # TODO - reproducible build
    # Re-build by setting CARGO_BAZEL_REPIN=true
    #lockfile = "//backend:cargo-bazel-lock.json",
    manifests = ["//backend:Cargo.toml"],
)

load(
    "@crate_index_backend//:defs.bzl",
    cargo_local_crate_repositories = "crate_repositories",
)

cargo_local_crate_repositories()
