workspace(name = "syntactic_sugar")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

###
### --- Rust Support ---
###

# Rust rules for `rust_binary, rust_library, etc.`
# https://github.com/bazelbuild/rules_rust
http_archive(
    name = "rules_rust",
    sha256 = "950a3ad4166ae60c8ccd628d1a8e64396106e7f98361ebe91b0bcfe60d8e4b60",
    urls = ["https://github.com/bazelbuild/rules_rust/releases/download/0.20.0/rules_rust-v0.20.0.tar.gz"],
)

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(edition = "2021")

# Load dependencies for rust-analyzer and `rust-project.json`
load("@rules_rust//tools/rust_analyzer:deps.bzl", "rust_analyzer_dependencies")

rust_analyzer_dependencies()

# Fetch cargo dependencies with cargo-raze
load("//cargo:crates.bzl", "raze_fetch_remote_crates")

raze_fetch_remote_crates()
