load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "buybacks_lib",
    srcs = glob(["src/**/*.rs"]),
    deps = [
        # TODO
    ],
)

rust_binary(
    name = "producer",
    srcs = ["bin/producer.rs"],
    deps = [
        ":buybacks_lib",
        "//cargo:tokio",
    ],
)
